Bug 1830600 - Remove nsIMsgWindow.windowCommands and related code. r=BenC

Downloading partial pop3 messages was broken.
There was some oddities in how/where switching to the new updated header was handled. I've now
moved it to the place that seems it should be responsible for such things.

Differential Revision: https://phabricator.services.mozilla.com/D179353

--HG--
extra : moz-landing-system : lando